--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
         "phpunit/phpunit": "^5.7"
     },
     "require": {
-        "slim/slim": "^3.6"
+        "slim/slim": "^3.6",
+        "slim/twig-view": "^2.1"
     }
 }
