Move PHP files into separate folder inside src/, update autoloader conf

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "autoload": {
         "psr-4": {
-            "Egoh\\": "src/"
+            "Egoh\\": "src/php/"
         }
     },
     "require-dev": {
