As long as we are already in npm world, let's use it's pipeline
Created two new commands to `npm`/`yarn`:

  - test:newman:dev
  - test:newman:release

Usage:

```bash
$ yarn run test:newman:dev
```

Commands will run Postman collection from `tests/integration/` folder using either
`develop` or `release` environment from `build/test` folder. The only difference
between them is the URL they use: `develop` expects API to be at `http://localhost:8080`,
while `release` tries `http://localhost:8000`.

--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "webpack-dev-server": "^1.16.2"
   },
   "devDependencies": {
+    "newman": "^3.3.1",
     "webpack": "^1.14.0"
   },
   "scripts": {
-    "start": "webpack-dev-server --hot"
+    "start": "webpack-dev-server --hot",
+    "test:newman:dev": "newman run tests/integration/Tictactoe.postman_collection.json -e build/test/develop.postman_environment.json --no-color",
+    "test:newman:release": "newman run tests/integration/Tictactoe.postman_collection.json -e build/test/release.postman_environment.json --no-color"
   }
 }
