--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
   "scripts": {
     "start": "webpack-dev-server --hot",
     "test:newman:dev": "newman run tests/integration/Tictactoe.postman_collection.json -e build/test/develop.postman_environment.json --no-color",
-    "test:newman:release": "newman run tests/integration/Tictactoe.postman_collection.json -e build/test/release.postman_environment.json --no-color"
+    "test:newman:release": "newman run tests/integration/Tictactoe.postman_collection.json -e build/test/release.postman_environment.json --no-color",
+    "webpack:watch": "webpack -d --watch",
+    "webpack:build": "webpack -d",
+    "webpack:build:offline": "webpack -d --config webpack.offline_config.js"
   }
 }
