--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "axios": "^0.15.3",
     "babel": "^6.5.2",
     "babel-cli": "^6.18.0",
@@ -7,13 +7,11 @@
     "babel-loader": "^6.2.10",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
+    "newman": "^3.3.1",
+    "webpack": "^1.14.0",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
     "webpack-dev-server": "^1.16.2"
-  },
-  "devDependencies": {
-    "newman": "^3.3.1",
-    "webpack": "^1.14.0"
   },
   "scripts": {
     "start": "webpack-dev-server --hot",
